--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -557,6 +557,17 @@ html {
 					blink 0.5s infinite step-end alternate;
 				overflow: hidden;
 			}
+			.home__title__eng {
+				margin: 0 auto;
+				margin-bottom: var(--mr-2);
+				text-transform: uppercase;
+				border-right: 4px solid;
+				white-space: nowrap;
+				width: 13ch;
+				animation: typing 4s infinite steps(15) alternate,
+					blink 0.5s infinite step-end alternate;
+				overflow: hidden;
+			}
 		}
 
 		.home__buttons {
@@ -641,7 +652,7 @@ html {
 					border-radius: 1rem;
 					text-align: center;
 					width: inherit;
-					transition: 0.5s cubic-bezier(0.6, -0.28, 0.735, 0.045);
+					transition: 1s cubic-bezier(0.6, -0.28, 0.735, 0.045);
 					overflow: hidden;
 
 					.skills__cards-title {
